# installed_browsers

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pypi.yml  python-app.yml  python.yml  testpypi.yml
installed_browsers/: __init__.py  common.py  linux.py  mac.py  windows.py
tests/: check_browsers.py
